--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%# <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
 
+    <%= stylesheet_link_tag 'header' %>
     <% if content_for? :stylesheet %>
       <%= yield :stylesheet %>
     <% end %>
