--- a/app/views/apw/reports/index.html.erb
+++ b/app/views/apw/reports/index.html.erb
@@ -1,4 +1,4 @@
-  <%= form_with url: apw_root_path, method: :get, local: true do |f| %>
+  <%= form_with url: apw_reports_path, method: :get, local: true do |f| %>
     <div class="filters">
     <!-- Chọn ngày bắt đầu -->
     <%= f.label :start_date, "Start date" %>
