--- a/app/assets/stylesheets/entries/index.css
+++ b/app/assets/stylesheets/entries/index.css
@@ -1,35 +1,21 @@
 table {
-  width: 100%;
-  margin-top: 30px;
   border-collapse: collapse;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
 }
 
 th, td {
-  padding: 12px;
+  border: 1px solid #000;
+  padding: 1px;
   text-align: center;
-  border: 1px solid #ddd;
+  font-size: 10px;
 }
 
 th {
-  background-color: #50E3C2;
-  color: white;
-  cursor: pointer;
-  position: relative;
+  background: #f2f2f2;
 }
 
-td {
-  background-color: #f9f9f9;
+.text-align-left {
+  text-align: left;
 }
-
-tr:nth-child(even) td {
-  background-color: #f1f1f1;
-}
-
-tr:hover td {
-  background-color: #e6f7f3;
-}
-
 
 .table-container {
   width: 100%;
@@ -38,14 +24,21 @@ tr:hover td {
 }
 
 .activity {
-  background-color: skyblue !important;
+  background-color: lightgreen;
 }
 
 .done {
-  background-color: gray !important;
+  background-color: lightgray;
 }
 
 .today {
-  color: black;
-  background-color: yellow !important;
+  background-color: lightskyblue;
+}
+
+.holiday {
+  background-color: lightgoldenrodyellow;
+}
+
+.in_progress {
+  background-color: lightcoral;
 }
