--- a/app/views/apw/entries/index.html.erb
+++ b/app/views/apw/entries/index.html.erb
@@ -9,7 +9,7 @@
       </tr>
       <tr>
         <th rowspan=2>Subject</th>
-        <th rowspan=2>Task</th>
+        <th rowspan=2>Task Description</th>
         <th rowspan=2>Owner</th>
         <th rowspan=2>Status</th>
         <th rowspan=2>Est</th>
@@ -36,7 +36,8 @@
           </td>
           <% task = story.sub_tasks.first %>
           <td class="text-align-left <%= :done if task.closed? %>">
-            <%= link_to task.subject, "https://dev.zigexn.vn/issues/#{task.issue_id}",
+            <%= link_to "[#{task.kind}] #{task.subject}",
+              "https://dev.zigexn.vn/issues/#{task.issue_id}",
               target: "_blank" %>
           </td>
           <td class="<%= :done if task.closed? %>"><%= task&.owner_name %></td>
@@ -50,7 +51,8 @@
           <% next if i.zero? %>
           <tr>
             <td class="text-align-left <%= :done if task.closed? %>">
-              <%= link_to task.subject, "https://dev.zigexn.vn/issues/#{task.issue_id}",
+              <%= link_to "[#{task.kind}] #{task.subject}",
+              "https://dev.zigexn.vn/issues/#{task.issue_id}",
               target: "_blank" %>
             </td>
             <td class="<%= :done if task.closed? %>"><%= task.owner_name %></td>
