--- a/app/views/apw/reports/index.html.erb
+++ b/app/views/apw/reports/index.html.erb
@@ -42,7 +42,7 @@
     </select> %>
 
     <!-- Nút Search -->
-    <%= f.button "Tìm kiếm", type: :submit, id: "search-button" %>
+    <%= f.button "Search", type: :submit, id: "search-button" %>
     <%# <button type="button" >Tìm kiếm</button> %>
   </div>
   <% end %>
