--- a/app/views/apw/entries/index.html.erb
+++ b/app/views/apw/entries/index.html.erb
@@ -1,3 +1,18 @@
+<%= form_with url: apw_root_path, method: :get, local: true do |f| %>
+  <div class="checkbox-container">
+    <% User.actived.each do |user| %>
+      <label>
+        <%= check_box_tag "q[user_ids][]", user.id,
+          @support.params_search.dig(:user_ids).include?(user.id.to_s) %>
+        <%= user.name %>
+      </label>
+    <% end %>
+  </div>
+  <hr>
+  <%= f.button "Search", type: :submit %>
+<% end %>
+
+<br>
 <div class="table-container">
   <table>
     <thead>
@@ -29,12 +44,13 @@
     </thead>
     <tbody>
       <% @support.stories.each do |story| %>
+        <% sub_tasks = @support.tasks.select{|x| x.story_id == story.id } %>
         <tr>
-          <td rowspan="<%= story.sub_tasks.size.zero? ? 1 : story.sub_tasks.size %>">
+          <td rowspan="<%= sub_tasks.size.zero? ? 1 : sub_tasks.size %>">
             <%= link_to story.subject, "https://dev.zigexn.vn/issues/#{story.issue_id}",
               target: "_blank" %>
           </td>
-          <% task = story.sub_tasks.first %>
+          <% task = sub_tasks.first %>
           <td class="text-align-left <%= :done if task.closed? %>">
             <%= link_to "[#{task.kind}] #{task.subject}",
               "https://dev.zigexn.vn/issues/#{task.issue_id}",
@@ -47,7 +63,7 @@
             <td class="<%= @support.class_name(task, date) %>"></td>
           <% end %>
         </tr>
-        <% story.sub_tasks.each.with_index(0) do |task, i| %>
+        <% sub_tasks.each.with_index(0) do |task, i| %>
           <% next if i.zero? %>
           <tr>
             <td class="text-align-left <%= :done if task.closed? %>">
