--- a/app/views/apw/entries/index.html.erb
+++ b/app/views/apw/entries/index.html.erb
@@ -65,6 +65,8 @@
           <td rowspan="<%= sub_tasks.size.zero? ? 1 : sub_tasks.size %>">
             <%= link_to story.subject, "https://dev.zigexn.vn/issues/#{story.issue_id}",
               target: "_blank" %>
+            <br>
+            <%= sub_tasks.status %>
           </td>
           <% task = sub_tasks.first %>
           <td class="text-align-left <%= :done if task.closed? %>">
