--- a/app/views/apw/entries/index.html.erb
+++ b/app/views/apw/entries/index.html.erb
@@ -66,7 +66,7 @@
             <%= link_to story.subject, "https://dev.zigexn.vn/issues/#{story.issue_id}",
               target: "_blank" %>
             <br>
-            <%= sub_tasks.status %>
+            <%= story.status %>
           </td>
           <% task = sub_tasks.first %>
           <td class="text-align-left <%= :done if task.closed? %>">
