--- a/app/assets/stylesheets/entries/index.css
+++ b/app/assets/stylesheets/entries/index.css
@@ -94,3 +94,112 @@ th {
 .display-flex {
   display: flex
 }
+
+.progress-container {
+  width: 70%;
+/*  max-width: 400px;*/
+  background: #ddd;
+  border-radius: 30px;
+  overflow: hidden;
+  margin: 20px auto;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  position: relative;
+  height: 10px;
+}
+.progress-bar {
+  width: 0;
+  height: 100%;
+  background: linear-gradient(45deg, #ff416c, #ff4b2b);
+  transition: width 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.progress-text {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+  color: black;
+  z-index: 2;
+}
+.fire {
+/*  position: absolute;*/
+/*  left: 0;*/
+/*  font-size: 20px;*/
+  transition: all 0.3s ease-in-out;
+/*  pointer-events: none;*/
+}
+
+/* Tooltip */
+.tooltip {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 8px;
+  border-radius: 8px;
+  font-size: 12px;
+  display: none;
+  z-index: 1000;
+  text-align: left;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(5px);
+}
+
+.tooltip::after {
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-width: 10px;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.7) transparent transparent transparent;
+}
+
+/* Table nhỏ gọn */
+.tooltip-table {
+  border-collapse: collapse;
+  width: 200px;
+  background: rgba(255, 255, 255, 0.85); /* Nền sáng hơn */
+  color: #333;
+  border-radius: 5px;
+  overflow: hidden;
+  text-align: left;
+  backdrop-filter: blur(8px);
+  font-size: 12px;
+}
+
+.tooltip-table th, .tooltip-table td {
+  padding: 6px; /* Giảm padding */
+}
+
+.tooltip-table th {
+  background: rgba(52, 152, 219, 0.9); /* Header sáng hơn */
+  color: white;
+  text-align: left;
+}
+
+.tooltip-table tr:hover {
+  background: rgba(0, 0, 0, 0.05);
+}
+
+.avatar {
+  width: 20px; /* Nhỏ hơn */
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 5px;
+  vertical-align: middle;
+  border: 1px solid #3498db; /* Viền xanh */
+}
+
+/* Nút kích hoạt tooltip */
+.tooltip-target {
+  color: white;
+  border-radius: 6px;
+  cursor: pointer;
+  margin-top: 50px;
+  font-size: 14px;
+  font-weight: bold;
+  transition: background 0.3s;
+}
