--- a/app/views/apw/entries/index.html.erb
+++ b/app/views/apw/entries/index.html.erb
@@ -77,10 +77,12 @@
                 target: "_blank"
               %>
             </strong>
-            <div class="progress-container">
-              <div class="progress-text">0%</div>  <!-- Text luôn ở giữa -->
-              <div class="progress-bar"></div>
-            </div>
+            <% unless story.timecrowd_est_ratio.zero? %>
+              <div class="progress-container">
+                <div class="progress-text">0%</div>  <!-- Text luôn ở giữa -->
+                <div class="progress-bar"></div>
+              </div>
+            <% end %>
             <% if story.time_crowd_task_content.dig("users") %>
               <div class="fire tooltip-target" data-tooltip="tooltip-table">🔥</div>
               <div class="tooltip">
